refactor: convert to OOP and remove comments

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
             <div class="space-y-2">
                 <button class="w-full bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600"
-                    onclick="checkout()">
+                    onclick="app.checkout()">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
 
                     ชำระเงิน
                 </button>
                 <button
                     class="w-full bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 flex items-center justify-center gap-2"
-                    onclick="clearCart()">
+                    onclick="app.clearCart()">
                     <i class="fa-solid fa-trash"></i>
                     <span>ล้างตะกร้า</span>
                 </button>
