--- a/index.html
+++ b/index.html
@@ -7,9 +7,60 @@
     <title>ตะกร้าสั่งอาหาร</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+
+
 </head>
 
 <body class="bg-gray-100 p-8">
+    <div id="notificationContainer" class="fixed top-4 right-4 z-50 space-y-2"></div>
+
+    <div id="orderModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden items-center justify-center"
+        onclick="if(event.target.id === 'orderModal') app.closeOrderModal()">
+        <div class="bg-white rounded-lg shadow-xl max-w-2xl w-full mx-4 max-h-[90vh] overflow-y-auto transform transition-all scale-95 opacity-0"
+            onclick="event.stopPropagation()">
+            <div class="p-6">
+                <div class="flex justify-between items-center mb-6">
+                    <h2 class="text-2xl font-bold text-green-600">
+                        <i class="fas fa-check-circle mr-2"></i>
+                        สั่งซื้อสำเร็จ!
+                    </h2>
+                    <button onclick="app.closeOrderModal()" class="text-gray-500 hover:text-gray-700 text-2xl">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+
+                <div class="border-b pb-4 mb-4">
+                    <h3 class="text-xl font-semibold mb-3">รายการสั่งซื้อ</h3>
+                    <div id="orderItems" class="space-y-3"></div>
+                </div>
+
+                <div class="space-y-2 mb-6">
+                    <div class="flex justify-between text-lg">
+                        <span>จำนวนรายการ:</span>
+                        <span id="orderItemCount" class="font-semibold">0</span>
+                    </div>
+                    <div class="flex justify-between text-lg">
+                        <span>จำนวนสินค้า:</span>
+                        <span id="orderProductCount" class="font-semibold">0</span>
+                    </div>
+                    <div class="flex justify-between text-xl font-bold text-green-600 pt-2 border-t">
+                        <span>รวมทั้งหมด:</span>
+                        <span id="orderTotal">0 บาท</span>
+                    </div>
+                </div>
+
+                <button onclick="app.closeOrderModal()"
+                    class="w-full bg-green-500 text-white px-6 py-3 rounded-lg hover:bg-green-600 font-semibold text-lg">
+                    ปิด
+                </button>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <h1 class="text-3xl font-bold mb-6 text-center">ตะกร้าสั่งอาหาร</h1>
 
     <div class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -44,11 +95,11 @@
             </div>
 
             <div class="space-y-2">
-                <button class="w-full bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600"
+                <button id="checkoutBtn"
+                    class="w-full bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 flex items-center justify-center gap-2 disabled:opacity-50 disabled:cursor-not-allowed"
                     onclick="app.checkout()">
                     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-
-                    ชำระเงิน
+                    <span>ชำระเงิน</span>
                 </button>
                 <button
                     class="w-full bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 flex items-center justify-center gap-2"
@@ -59,8 +110,9 @@
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
+
 </body>
 
 </html>
